syntax = "proto3";

package coupon;

option go_package = "https://github.com/perkbox/challenge/core";

service CouponService {
  rpc CreateCoupon(CreateCouponRequest) returns (Coupon);
  rpc GetCoupon(GetCouponRequest) returns (Coupon);
  rpc GetCoupons(GetCouponsRequest) returns (GetCouponsResponse);
  rpc DeleteCoupon(DeleteCouponRequest) returns (DeleteCouponResponse);
}

message Coupon {
  string id = 1;
  string name = 2;
  string brand = 3;
  int64 value = 4;
  string createdAt = 5;
  string expiry = 6;
}

message CreateCouponRequest {
  string name = 1;
  string brand = 2;
  int64 value = 3;
  string expiry = 4;
}

message GetCouponRequest {
  string id = 1;
}

message GetCouponsRequest {}

message GetCouponsResponse {
  repeated Coupon coupons = 1;
}

message DeleteCouponRequest {
  string id = 1;
}

message DeleteCouponResponse {}